Fix caches dropdown in netsurf
Fixes caches list overlapping other entries in Netsurf by hiding the
styles using an attribute selector.

The display: inline-block is ignored by the rest of the browsers, and
keeps the UI slightly more tidy in Netsurf

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -1021,7 +1021,7 @@ div.comment_text code {
 	list-style: none;
 }
 
-.caches ul {
+.caches[open] ul {
 	position: absolute;
 	background: var(--color-bg);
 	border: 1px solid var(--color-box-border);
@@ -1032,6 +1032,7 @@ div.comment_text code {
 }
 
 .caches li {
+	display: inline-block; /* Netsurf */
 	border-bottom: 1px solid var(--color-box-border);
 }
 
